# jk

./: .gitignore  .jk.yml  CMakeLists.txt  MANIFEST.in  README.md  commands.yml  jk.py  main.c  name-gen.py  parser.py  requirements.txt  setup.cfg  tasks.mmd  test.yml
_jk/: template.py
_jk/additions/: Taskfile.yml  commands.yml  jk-global.yml
_jk/templates/: config.yml.j2
jk/: executors.yml
jk/cmd/: build.yml
jk/executors/: shell.yml
jklib/: cmd.yml  env.yml  executors.yml  pre-conditions.yml  tasks.yml  validators.yml
jklib/cmd/: build-cmake.sh  python-build.yml  python-pip-install.yml  python.yml
jklib/env/: c.yml  python.yml
jklib/executors/: python.yml  sh.yml
jklib/scripts/: project-env-valid.sh
jklib/tasks/: python-run.yml
