[metadata]
name = jk
version = attr: jk.__version__
author = Aymeric Guth
author_email = aymeric.guth@protonmail.com
url = https://gitea.ars-virtualis.org/yul/jk-proto
description = jk is a command runner
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
py_modules = jk
# packages = find:
python_requires = >=3.11
zip_safe = True
include_package_data = True
install_requires =
    pyyaml 
    ipdb
    rich

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    docs*
    *.egg-info*
    .env
    .envrc
    .tmuxp.yaml

[options.entry_points]
console_scripts = 
    jk = jk:main

[options.package_data]
jk = py.typed
* = README.md, jklib

[flake8]
# See https://github.com/PyCQA/pycodestyle/issues/373
ignore = E203
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
#max-complexity = 12
#select = B,C,E,F,W,B9
exclude = .venv/, tests/*
